# rusty_compactor

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  SECURITY.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
crates/rc-cli/: Cargo.toml
crates/rc-cli/src/: cmd_compress.rs  cmd_config.rs  cmd_hook.rs  cmd_run.rs  cmd_stats.rs  main.rs
crates/rc-cli/tests/: cli.rs
crates/rc-cli/tests/fixtures/: cargo_test_failure.txt  cargo_test_pass.txt  generic_noisy_log.txt  git_status_dirty.txt  go_test_failure.txt  jest_failure.txt  npm_install.txt  pytest_failure.txt
crates/rc-cli/tests/snapshots/: cli__golden_fixture_tests__cargo_test_failure.snap  cli__golden_fixture_tests__cargo_test_pass.snap  cli__golden_fixture_tests__generic_unknown_tool_dedupes_and_protects_errors.snap  cli__golden_fixture_tests__git_status_dirty.snap  cli__golden_fixture_tests__go_test_failure.snap  cli__golden_fixture_tests__jest_failure.snap  cli__golden_fixture_tests__npm_install.snap  cli__golden_fixture_tests__pytest_failure.snap
crates/rc-compress/: Cargo.toml
crates/rc-compress/src/: engine.rs  level.rs  lib.rs  rules.rs  segment.rs
crates/rc-core/: Cargo.toml
crates/rc-core/src/: command.rs  config.rs  lib.rs  result.rs  stats.rs
crates/rc-engine/: Cargo.toml
crates/rc-engine/src/: defaults.rs  lib.rs  registry.rs  rules.rs  strategies.rs  structured.rs
docs/adr/: 0001-deterministic-rule-based-compaction.md  0002-split-compound-commands-in-run-not-the-hook.md
