[workspace]
resolver = "2"
members = [
    "crates/rc-core",
    "crates/rc-engine",
    "crates/rc-compress",
    "crates/rc-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/baileyrd/rusty_compactor"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
regex = "1"
once_cell = "1"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"

[profile.release]
lto = true
codegen-units = 1
strip = true
