[package]
name = "rc-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rusty_compactor"
path = "src/main.rs"

[dependencies]
rc-core = { path = "../rc-core" }
rc-engine = { path = "../rc-engine" }
rc-compress = { path = "../rc-compress" }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
insta = "1"
predicates = "3"
tempfile = "3"
