[package]
name = "rc-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rc-core = { path = "../rc-core" }
regex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
